--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -26,7 +26,23 @@ body {
   <main>
         <div class="wrapper">
   <header class="header">A look at my work</header>
-        <aside class="sidebar"> <h3>Feel free to browse some of my projects!</h3></aside>
+        <aside class="sidebar"> <h3>Feel free to browse some of my projects!</h3>
+               <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
+                    </ul>
+                    </nav>
+          </aside>
         <article class="content">
                       <div>
 <h3>Advisors Forum Professional Development Series</h3>
@@ -62,24 +78,7 @@ body {
 
                                                                     <br>
                    </article>
-                <header class="header">
 
-               <nav>
-                    <ul>
-                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
-                        <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
-                        </li>
-                        </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
-                    </ul>
-                    </nav>
-           </header>
         </main>
 <br>
     <footer class="footer">
