--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,6 +23,8 @@ body {
     font-family: 'Montserrat';font-size: 18px;
 }
 </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main>
@@ -89,7 +91,7 @@ body {
         </main>
 <br>
     <footer class="footer">
-        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:24px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
