--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -38,7 +38,7 @@ body {
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                         <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Professional Development Series</a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
                         </li>
@@ -91,7 +91,7 @@ body {
         </main>
 <br>
     <footer class="footer">
-        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:24px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:12px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
