--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -22,6 +22,8 @@ body {
     font-family: 'Montserrat';font-size: 18px;
 }
 </style>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -35,7 +37,7 @@ body {
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                         <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Professional Development Series</a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
                         </li>
@@ -69,7 +71,7 @@ body {
         </main>
 <br>
     <footer class="footer">
-        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:12px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
