--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -90,8 +90,8 @@ body {
 
         </main>
 <br>
-    <footer class="footer">
-        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:12px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+<footer class="footer">
+        Kasey Freeman,<a href="kefreeman@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu</a>,<a href="816-255-0044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
