--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -24,6 +24,7 @@ body {
 </style>
    <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -70,8 +71,8 @@ body {
 
         </main>
 <br>
-    <footer class="footer">
-        Kasey Freeman, kefreeman@umsystem.edu <i style="font-size:12px" class="fa">&#xf0e0;</i>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+<footer class="footer">
+        Kasey Freeman, email me at <a href="kefreeman@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu</a>, or call me at <a href="816-255-0044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
