--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -24,13 +24,19 @@ body {
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
-            <aside class="sidebar"></aside>
+            <aside class="sidebar">
+              <div class="image"> <img src="https://kefr7t.github.io/islt_7310/android-chrome-192x192.png">
+            </aside>
             <article class="content">
     <h1>Who am I?</h1>
         <p> 
