--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -24,8 +24,6 @@ body {
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 </head>
@@ -67,7 +65,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <a href="kefreeman@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu</a>, or call me at <a href="816-255-0044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <div class="istyle"><a href="emailto:kefreeman@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu</a>, or call me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf095;</i></div> 816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
