--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -24,8 +24,8 @@ body {
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -33,7 +33,7 @@ body {
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
             <aside class="sidebar">
-              <div class="image"> <img src="https://kefr7t.github.io/islt_7310/android-chrome-192x192.png">
+              <div class="image"> <img src="https://kefr7t.github.io/islt_7310/favicon.ico">
             </aside>
             <article class="content">
     <h1>Who am I?</h1>
