--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -25,7 +25,7 @@ body {
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 
@@ -33,7 +33,7 @@ body {
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
             <aside class="sidebar">
-
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
             </aside>
             <article class="content">
     <h1>Who am I?</h1>
@@ -65,7 +65,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf0e0;</div></i>kefreeman@umsystem.edu, or call me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf095;</i></div>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu, or call me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf095;</i></div>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
