--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,8 +12,9 @@ Tested:  September 24, 2023
 <head> 
         <meta charset="utf-8">
         <title>Home page</title> 
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
         <link rel="stylesheet" 
         href="style.css">
         <link rel="stylesheet"
@@ -65,7 +66,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu, or call me at <div class="istyle"><i style="font-size:12px" class="fa">&#xf095;</i></div>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu, or call me at <i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
