--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -72,7 +72,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <a href="kefreeman@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu</a>, or call me at <a href="816-255-0044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu, or call me at <i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
