--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -12,7 +12,7 @@ Tested:  September 24, 2023
 <head> 
         <meta charset="utf-8">
         <title>Home page</title> 
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://kefr7t.github.io/islt_7310/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <link rel="stylesheet" 
