--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -26,6 +26,28 @@ body {
 }
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+* {
+  box-sizing: border-box;
+}
+
+.zoom {
+  padding: 15px;
+  background-color: #004225;
+  transition: transform .2s;
+  width: 20px;
+  height: 20px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+</style>
 
 </head>
 <body>
@@ -64,7 +86,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu </a>, or call me at <a href="tel:8162550044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><div class="zoom"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu </a>, or call me at <a href="tel:8162550044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
