--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -30,15 +30,15 @@ body {
 
   <style>
 * {
-  box-sizing: border-box;
+  box-sizing: hidden;
 }
 
 .zoom {
   padding: 15px;
-  background-color: #004225;
+  background-color: clear;
   transition: transform .2s;
-  width: 20px;
-  height: 20px;
+  width: 12px;
+  height: 12px;
   margin: 0 auto;
 }
 
