--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -86,7 +86,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><div class="zoom"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu </a>, or call me at <a href="tel:8162550044"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><div class="zoom"><i style="font-size:12px" class="fa">&#xf0e0;</i></div>kefreeman@umsystem.edu </a>, or call me at <a href="tel:8162550044"><div class="zoom"><i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044</a> </div>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
