--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -34,12 +34,17 @@ Tested:  September 26, 2023
               <input type="text" id="email" name="email" placeholder="Email" required>
           
               <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something..." style="height:200px"></textarea>
+              <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px"></textarea>
+              <form method="post" action="mailto:kefr7t@umsystem.edu?subject=Professional Website Contact">
               <input type="submit" value="Submit" required>
           
             </form>
-
           </div>
+               <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/about.html">Return to Main Site</a></li>
+                    </ul>
+               </nav>
     </main>
             <br>
     <footer>
