--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -69,7 +69,7 @@ body {
                         </li>
                         </ul>
                         <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/contact.html">Contact Me</a></li>
                     </ul>
                     </nav>
             </aside>
