--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -47,8 +47,8 @@ Tested:  September 26, 2023
                </nav>
     </main>
             <br>
-    <footer>
-        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+<footer class="footer">
+        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><div class="zoom fa"><i style="font-size:12px" class= fa>&#xf0e0;</i></div>kefreeman@umsystem.edu</a>, or call me at <a href="tel:8162550044"><div class="zoom fa"><i style="font-size:12px" class= fa>&#xf095;</i></div>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </body>
 </html>
