--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -25,6 +25,29 @@ body {
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+* {
+  box-sizing: hidden;
+}
+
+.zoom {
+  padding: 15px;
+  background-color: clear;
+  transition: transform .2s;
+  width: 12px;
+  height: 12px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+</style>
 </head>
 <body>
     <main>
@@ -44,7 +67,7 @@ body {
                         </li>
                         </ul>
                         <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/contact.html">Contact Me</a></li>
                     </ul>
                     </nav>
              </aside>
@@ -91,7 +114,7 @@ body {
         </main>
 <br>
 <footer class="footer">
-        Kasey Freeman, email me at <i style="font-size:12px" class="fa">&#xf0e0;</i>kefreeman@umsystem.edu, or call me at <i style="font-size:12px" class="fa">&#xf095;</i>816-255-0044. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+        Kasey Freeman, email me at <a href=mailto:"kefr7t@umsystem.edu"><div class="zoom fa"><i style="font-size:12px" class= fa>&#xf0e0;</i></div>kefreeman@umsystem.edu</a>, or call me at <a href="tel:8162550044"><div class="zoom fa"><i style="font-size:12px" class= fa>&#xf095;</i></div>816-255-0044</a>. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
 </div>
  </body>
