--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -17,6 +17,29 @@ Tested:  September 26, 2023
                <link rel="stylesheet"
                href="nav.css">
                <title>Contact Me</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+* {
+  box-sizing: hidden;
+}
+
+.zoom {
+  padding: 15px;
+  background-color: clear;
+  transition: transform .2s;
+  width: 12px;
+  height: 12px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+</style>
 </head>
 <body>
     <main>
