--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -58,7 +58,7 @@ Tested:  September 26, 2023
           
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px"></textarea>
-              <input type="submit" value="Submit" action="mailto:kefr7t@umsystem.edu?subject=Professional Website Contact" required>
+              <input type="submit" value=<a href=mailto:"kefr7t@umsystem.edu?subject=Professional Website Contact">"Submit"</a> required>
           
             </form>
           </div>
