--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -17,7 +17,12 @@ Tested:  September 26, 2023
                <link rel="stylesheet"
                href="nav.css">
                <title>Contact Me</title>
-
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Montserrat';font-size: 18px;
+}
+</style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
