--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -63,7 +63,7 @@ body {
           
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px"></textarea>
-              <input type="submit" value="<a href=mailto:"kefr7t@umsystem.edu?subject=Professional Website Contact">Submit"</a> required>
+              <input type="submit" value=<a href=mailto:"kefr7t@umsystem.edu?subject=Professional Website Contact">"Submit"</a> required>
           
             </form>
           </div>
