--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -10,19 +10,23 @@ Tested:  September 26, 2023
 -->
 
 <html lang="en-US">
-<head>
-               <meta charset="utf-8">
-               <link rel="stylesheet" 
-               href="style.css">
-               <link rel="stylesheet"
-               href="nav.css">
-               <title>Contact Me</title>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-<style>
+<html lang="en-US">
+<head> 
+        <meta charset="utf-8">
+        <title>About me</title>     
+        <link rel="stylesheet" 
+        href="style.css">
+        <link rel="stylesheet"
+        href="nav.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <style>
 body {
     font-family: 'Montserrat';font-size: 18px;
 }
 </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -62,7 +66,7 @@ body {
               <input type="text" id="email" name="email" placeholder="Email" required>
           
               <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px"></textarea>
+              <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px" required></textarea>
               <input type="submit" value="Submit" required>
           
             </form>
