--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -105,10 +105,14 @@ body {
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
            <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
-<div class="scroll-container">
-  <img src="https://kefr7t.github.io/islt_7310/resume1.png" alt="Resume Page 1">
-  <img src="https://kefr7t.github.io/islt_7310/resume2.png" alt="Resume Page 2">
-</div> 
+<div class="row">
+  <div class="column">
+    <img src="https://kefr7t.github.io/islt_7310/resume1.png" alt="Resume Page 1" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="https://kefr7t.github.io/islt_7310/resume2.png" alt="Resume Page 2" style="width:100%">
+  </div>
+</div>
              <br>
              
              <div class="video"><iframe width="auto" height="auto" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
