--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -105,14 +105,46 @@ body {
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
            <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
-<div class="row">
-  <div class="column">
-    <img src="https://kefr7t.github.io/islt_7310/resume1.png" alt="Resume Page 1" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="https://kefr7t.github.io/islt_7310/resume2.png" alt="Resume Page 2" style="width:100%">
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://kefr7t.github.io/islt_7310/resume1.png">
+      <img src="https://kefr7t.github.io/islt_7310/resume1.png" alt="Resume Page 1">
+    </a>
+    <div class="desc">Resume 1/2</div>
   </div>
 </div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://kefr7t.github.io/islt_7310/resume2.png">
+      <img src="https://kefr7t.github.io/islt_7310/resume2.png" alt="Resume Page 2">
+    </a>
+    <div class="desc">Resume 2/2</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="img_lights.jpg">
+      <img src="img_lights.jpg" alt="Northern Lights">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="img_mountains.jpg">
+      <img src="img_mountains.jpg" alt="Mountains">
+    </a>
+    <div class="desc">Add a description of the image here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+             
              <br>
              
              <div class="video"><iframe width="auto" height="auto" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
