--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -48,6 +48,41 @@ body {
   transform: scale(1.5); 
 }
 </style>
+
+
+  
+let slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+
+
+
+
+  
 </head>
 <body>
     <main>
@@ -105,44 +140,33 @@ body {
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
            <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
+<!-- Slideshow container -->
+<div class="slideshow-container">
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="https://kefr7t.github.io/islt_7310/resume1.png">
-      <img src="https://kefr7t.github.io/islt_7310/resume1.png" alt="Resume Page 1">
-    </a>
-    <div class="desc">Resume 1/2</div>
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1/2</div>
+    <img src="https://kefr7t.github.io/islt_7310/resume1.png" style="width:100%">
+    <div class="text">Resume</div>
   </div>
-</div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="https://kefr7t.github.io/islt_7310/resume2.png">
-      <img src="https://kefr7t.github.io/islt_7310/resume2.png" alt="Resume Page 2">
-    </a>
-    <div class="desc">Resume 2/2</div>
+  <div class="mySlides fade">
+    <div class="numbertext">2/2</div>
+    <img src="https://kefr7t.github.io/islt_7310/resume2.png" style="width:100%">
+    <div class="text">Resume</div>
   </div>
-</div>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights">
-    </a>
-    <div class="desc">Add a description of the image here</div>
-  </div>
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+<br>
 
-<div class="responsive">
-  <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains">
-    </a>
-    <div class="desc">Add a description of the image here</div>
-  </div>
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
 </div>
-
-<div class="clearfix"></div>
 
              
              <br>
