--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -49,7 +49,7 @@ body {
 }
 </style>
 
-
+<script>
   
 let slideIndex = 1;
 showSlides(slideIndex);
@@ -79,7 +79,7 @@ function showSlides(n) {
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
 
-
+</script>
 
 
   
